tests/diagnostics/clear_immutable.kal
# clear needs a mutable Vec.
{ let v: Vec<i64> = vec(); clear(v); };
